fixed alignment in aboutus

--- a/src/components/AboutUsSection.css
+++ b/src/components/AboutUsSection.css
@@ -242,8 +242,8 @@
   }
 
   .aboutus-columns {
-    align-items: center;
-    text-align: center;
+    align-items: left;
+    text-align: left;
   }
 
   .description-text {
